Ship creator tests extended. Added body to methods