@@ -3,6 +3,7 @@ import model.Ship;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 
+import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 
@@ -13,27 +14,19 @@ class ShipCreatorTest {
     @Test
     void returnTrueWhenPositionsAreNotOccupiedByOtherShip() {
         //GIVEN
-        List<Point> shipToCreate = new java.util.ArrayList<>(Collections.emptyList());
-        Point pointToCreate = new Point(5, 9);
-        shipToCreate.add(pointToCreate);
+        List<Point> shipToCreate = new ArrayList<>(Collections.emptyList());
+        Point shipPoint1 = new Point(5, 9);
+        Point shipPoint2 = new Point(5, 10);
+        Point shipPoint3 = new Point(5, 8);
+        Point shipPoint4 = new Point(5, 7);
+        shipToCreate.add(shipPoint1);
+        shipToCreate.add(shipPoint2);
+        shipToCreate.add(shipPoint3);
+        shipToCreate.add(shipPoint4);
 
-        List<Ship> ships = List.of();
-
-        //WHEN
-        Boolean value = shipCreator.checkIfShipLocationIsOccupiedByOther(ships, shipToCreate);
-
-        //THEN
-        Assertions.assertTrue(value);
-    }
-
-    @Test
-    void returnFalseWhenPositionsAreOccupiedByOtherShip() {
-        //GIVEN
-        List<Point> shipToCreate = new java.util.ArrayList<>(Collections.emptyList());
-        Point pointToCreate = new Point(5, 9);
-        shipToCreate.add(pointToCreate);
-
-        List<Ship> ships = List.of();
+        Ship existingShip1 = new Ship();
+        existingShip1.setPoints(List.of(new Point(5, 1), new Point(5, 2), new Point(5, 3), new Point(5, 4)));
+        List<Ship> ships = List.of(existingShip1);
 
         //WHEN
         Boolean value = shipCreator.checkIfShipLocationIsOccupiedByOther(ships, shipToCreate);
@@ -43,15 +36,40 @@ class ShipCreatorTest {
     }
 
     @Test
+    void returnFalseWhenPositionsAreOccupiedByOtherShip() {
+        //GIVEN
+        List<Point> shipToCreate = new ArrayList<>(List.of());
+        Point shipPoint1 = new Point(5, 9);
+        Point shipPoint2 = new Point(5, 10);
+        Point shipPoint3 = new Point(5, 8);
+        Point shipPoint4 = new Point(5, 7);
+        shipToCreate.add(shipPoint1);
+        shipToCreate.add(shipPoint2);
+        shipToCreate.add(shipPoint3);
+        shipToCreate.add(shipPoint4);
+
+        List<Ship> ships = new ArrayList<>(List.of());
+        Ship existingShip1 = new Ship();
+        existingShip1.setPoints(List.of(new Point(5, 7), new Point(5, 8), new Point(5, 9), new Point(5, 10)));
+        ships.add(existingShip1);
+
+        //WHEN
+        Boolean value = shipCreator.checkIfShipLocationIsOccupiedByOther(ships, shipToCreate);
+
+        //THEN
+        Assertions.assertTrue(value);
+    }
+
+    @Test
     void whenShipHasBeenCreatedWithGivenArguments() {
         int length = 4;
         String position = "horizontal";
         String direction = "left";
+        Point startingPoint = new Point(3, 4);
 
-        Ship createdShip = shipCreator.createShip(length, position, direction);
+        Ship createdShip = shipCreator.createShip(length, position, direction, startingPoint);
 
         Assertions.assertNotNull(createdShip.getShipLength());
-        Assertions.assertNotNull(createdShip.getName());
         Assertions.assertNotNull(createdShip.getPoints());
     }
 }
